--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,19 +17,12 @@
     restart: always
     ports:
       - "6379:6379"
-    volumes:
-      - redis_data:/data
-    command: [
-      "redis-server",
-      "--appendonly", "yes",
-      "--appendfsync", "everysec",
-      "--auto-aof-rewrite-percentage", "100",
-      "--auto-aof-rewrite-min-size", "64mb",
-      "--maxclients", "100",  # Ограничение подключений
-      "--timeout", "300",    # Таймаут для неактивных клиентов
-      "--maxmemory", "128mb",  # Ограничение памяти
-      "--maxmemory-policy", "allkeys-lru"  # Удаление наименее используемых ключей
-    ]
+    command:
+      - redis-server
+      - --appendonly
+      - "no"
+      - --save
+      - ""
   db:
     image: postgres
     restart: always
