--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,16 +31,14 @@
           cpus: '0.5'  # Ограничение до 0.5 CPU
           memory: 256M
   db:
-    image: postgres
-    restart: always
-    environment:
-      POSTGRES_DB: backgammon
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+      image: postgres
+      restart: always
+      environment:
+        - POSTGRES_USER=${POSTGRES_USER}
+        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - POSTGRES_DB=${POSTGRES_DB}
+      volumes:
+        - pgdata:/var/lib/postgresql/data
 
 volumes:
   redis_data:
