--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,23 +12,44 @@
     restart: unless-stopped
 
   redis:
-    image: redis:7.2-alpine
-    container_name: redis
-    restart: always
-    ports:
-      - "6379:6379"
-    command:
-      - redis-server
-      - --appendonly no
-      - --save ""
-      - --maxmemory 128mb
-      - --maxmemory-policy allkeys-lru
-      - --activedefrag yes
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'  # Ограничение до 0.5 CPU
-          memory: 256M
+      image: redis:latest
+      container_name: redis
+      environment:
+        - REDIS_PASSWORD=${REDIS_PASSWORD}
+        - REDIS_USER=${REDIS_USER}
+        - REDIS_USER_PASSWORD=${REDIS_USER_PASSWORD}
+      ports:
+        - "6380:6379"  # Изменен порт для уникальности
+      volumes:
+        - ./redisdata:/data  # Монтирование данных
+      deploy:
+        resources:
+          limits:
+            cpus: '0.5'
+            memory: 512M
+          reservations:
+            cpus: '0.25'
+            memory: 256M
+      command: >
+        sh -c '
+          mkdir -p /usr/local/etc/redis &&
+          echo "bind 127.0.0.1" > /usr/local/etc/redis/redis.conf &&  # Ограничим доступ внутри сети
+          echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
+          echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
+          echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
+          echo "user default on >$REDIS_PASSWORD ~* +@all" > /usr/local/etc/redis/users.acl &&  # Упростили ACL
+          echo "user $REDIS_USER on >$REDIS_USER_PASSWORD ~* +@all" >> /usr/local/etc/redis/users.acl &&
+          redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
+        '
+      healthcheck:
+        test: ["CMD", "redis-cli", "-a", "$REDIS_PASSWORD", "ping"]
+        interval: 30s
+        timeout: 10s
+        retries: 5
+      restart: unless-stopped
+      tty: true
+      stdin_open: true
+      
   db:
       image: postgres
       restart: always
