--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,11 +33,11 @@
       command: >
         sh -c '
           mkdir -p /usr/local/etc/redis &&
-          echo "bind 127.0.0.1" > /usr/local/etc/redis/redis.conf &&  # Ограничим доступ внутри сети
+          echo "bind 0.0.0.0" > /usr/local/etc/redis/redis.conf &&
           echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
           echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
           echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
-          echo "user default on >$REDIS_PASSWORD ~* +@all" > /usr/local/etc/redis/users.acl &&  # Упростили ACL
+          echo "user default on >$REDIS_PASSWORD ~* +@all" > /usr/local/etc/redis/users.acl &&  #
           echo "user $REDIS_USER on >$REDIS_USER_PASSWORD ~* +@all" >> /usr/local/etc/redis/users.acl &&
           redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
         '
