--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 ﻿services:
   backgammon-bot:
     build: .
-    command: /bin/sh -c "python -m bot.init"
+    command: /bin/sh -c "alembic upgrade head && python -m bot.init"
     container_name: backgammon_bot
     volumes:
       - ./bot:/app/bot
