--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,20 @@
         - POSTGRES_DB=${POSTGRES_DB}
       volumes:
         - pgdata:/var/lib/postgresql/data
+  
+  db_backup:
+    build: .
+    command: /bin/sh -c "apt-get update && apt-get install -y postgresql-client && python -m bot.db.pg_backup"
+    container_name: db_backup
+    volumes:
+      - ./bot:/app/bot
+      - ./log:/app/log
+    env_file:
+      - .env
+    depends_on:
+      - db
+    restart: unless-stopped
+
 
 volumes:
   pgdata:
