--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@
   
   db_backup:
     build: .
-    command: /bin/sh -c "apt-get update && apt-get install -y postgresql-client && python -m bot.db.pg_backup"
+    command: /bin/sh -c "apt-get update && apt-get install -y lsb-release && echo 'deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main' > /etc/apt/sources.list.d/pgdg.list && apt-get update && apt-get install -y postgresql-client-17 && python -m bot.db.pg_backup"
     container_name: db_backup
     volumes:
       - ./bot:/app/bot
