--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-﻿services:
+﻿
+services:
   backgammon-bot:
     build: .
     command: /bin/sh -c "alembic upgrade head && python -m bot.init"
@@ -7,59 +8,53 @@
       - ./bot:/app/bot
       - ./log:/app/log
       - ./files:/app/files
+      - ./front/public/json:/app/front/public/json
     env_file:
       - .env
     restart: unless-stopped
+  
 
   redis:
-      image: redis:latest
-      container_name: redis
-      environment:
-        - REDIS_PASSWORD=${REDIS_PASSWORD}
-        - REDIS_USER=${REDIS_USER}
-        - REDIS_USER_PASSWORD=${REDIS_USER_PASSWORD}
-      ports:
-        - "6379:6379"  
-      volumes:
-        - ./redisdata:/data 
-      deploy:
-        resources:
-          limits:
-            cpus: '0.5'
-            memory: 512M
-          reservations:
-            cpus: '0.25'
-            memory: 256M
-      command: >
-        sh -c '
-          mkdir -p /usr/local/etc/redis &&
-          echo "bind 0.0.0.0" > /usr/local/etc/redis/redis.conf &&
-          echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
-          echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
-          echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
-          echo "user default on >$REDIS_PASSWORD ~* +@all" > /usr/local/etc/redis/users.acl &&  #
-          echo "user $REDIS_USER on >$REDIS_USER_PASSWORD ~* +@all" >> /usr/local/etc/redis/users.acl &&
-          redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
-        '
-      healthcheck:
-        test: ["CMD", "redis-cli", "-a", "$REDIS_PASSWORD", "ping"]
-        interval: 30s
-        timeout: 10s
-        retries: 5
-      restart: unless-stopped
-      tty: true
-      stdin_open: true
+    image: redis:latest
+    container_name: redis
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_USER=${REDIS_USER}
+      - REDIS_USER_PASSWORD=${REDIS_USER_PASSWORD}
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redisdata:/data
+    command: >
+      sh -c '
+        mkdir -p /usr/local/etc/redis &&
+        echo "bind 0.0.0.0" > /usr/local/etc/redis/redis.conf &&
+        echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
+        echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
+        echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
+        echo "user default on >$REDIS_PASSWORD ~* +@all" > /usr/local/etc/redis/users.acl &&
+        echo "user $REDIS_USER on >$REDIS_USER_PASSWORD ~* +@all" >> /usr/local/etc/redis/users.acl &&
+        redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
+      '
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "$REDIS_PASSWORD", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    restart: unless-stopped
+    tty: true
+    stdin_open: true
 
   db:
-      image: postgres
-      restart: always
-      environment:
-        - POSTGRES_USER=${POSTGRES_USER}
-        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-        - POSTGRES_DB=${POSTGRES_DB}
-      volumes:
-        - pgdata:/var/lib/postgresql/data
-  
+    image: postgres
+    restart: always
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
   db_backup:
     build: .
     command: /bin/sh -c "python -m bot.db.pg_backup"
@@ -72,7 +67,6 @@
     depends_on:
       - db
     restart: unless-stopped
-
 
 volumes:
   pgdata:
