--- a/front/docker-compose.yml
+++ b/front/docker-compose.yml
@@ -11,3 +11,4 @@ services:
     environment:
       - PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
       - PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+    restart: always
