--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,21 @@
       - .env
     restart: unless-stopped
 
+  backgammon-api:
+    build: .
+    command: /bin/sh -c "uvicorn bot.api:app --host 0.0.0.0 --port 8000 --reload"
+    container_name: backgammon_api
+    volumes:
+      - ./bot:/app/bot
+      - ./log:/app/log
+      - ./files:/app/files
+      - ./front/public/json:/app/front/public/json
+    env_file:
+      - .env
+    ports:
+      - "8000:8000"
+    restart: unless-stopped
+
   redis:
     image: redis:latest
     container_name: redis
