--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,15 +39,15 @@ services:
       - ./redisdata:/data
       - ./redis.conf:/usr/local/etc/redis/redis.conf
     command: >
-      sh -c '
-      mkdir -p /usr/local/etc/redis &&
-      echo "bind 0.0.0.0" > /usr/local/etc/redis/redis.conf &&
-      echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
-      echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
-      echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
-      echo "maxmemory 2gb" >> /usr/local/etc/redis/redis.conf &&
-      echo "maxmemory-policy allkeys-lru" >> /usr/local/etc/redis/redis.conf &&
-      redis-server /usr/local/etc/redis/redis.conf
+      sh -c '0
+        mkdir -p /usr/local/etc/redis &&
+        echo "bind 0.0.0.0" > /usr/local/etc/redis/redis.conf &&
+        echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
+        echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
+        echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
+        echo "user default on >$REDIS_PASSWORD ~* +@all" > /usr/local/etc/redis/users.acl &&
+        echo "user $REDIS_USER on >$REDIS_USER_PASSWORD ~* +@all" >> /usr/local/etc/redis/users.acl &&
+        redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
       '
     healthcheck:
       test: ["CMD", "redis-cli", "-a", "$REDIS_PASSWORD", "ping"]
