--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,11 +54,16 @@ services:
   worker-1:
     build: .
     container_name: backgammon_worker_1
-    command: python -m bot.workers.hint_worker
+    command: python -m bot.workers.hint_viewer_worker
+    depends_on:
+      redis:
+        condition: service_healthy
     environment:
-      - REDIS_HOST=root
+      - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_USER=${REDIS_USER}
+      - REDIS_USER_PASSWORD=${REDIS_USER_PASSWORD}
       - PYTHONUNBUFFERED=1
     volumes:
       - ./bot:/app/bot
@@ -70,11 +75,16 @@ services:
   worker-2:
     build: .
     container_name: backgammon_worker_2
-    command: python -m bot.workers.hint_worker
+    command: python -m bot.workers.hint_viewer_worker
+    depends_on:
+      redis:
+        condition: service_healthy
     environment:
-      - REDIS_HOST=root
+      - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_USER=${REDIS_USER}
+      - REDIS_USER_PASSWORD=${REDIS_USER_PASSWORD}
       - PYTHONUNBUFFERED=1
     volumes:
       - ./bot:/app/bot
