--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,7 +110,7 @@ services:
     ports:
       - "9181:9181"
     environment:
-      - RQ_DASHBOARD_REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379
+      - RQ_DASHBOARD_REDIS_URL=redis://{REDIS_USER}:${REDIS_PASSWORD}@redis:6379
     depends_on:
       - redis
     restart: unless-stopped
