--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,26 +71,25 @@ services:
       - ./log:/app/log
     restart: unless-stopped
 
-  # === Worker #2 для обработки анализов ===
-  worker-2:
-    build: .
-    container_name: backgammon_worker_2
-    command: python -m bot.workers.hint_worker
-    depends_on:
-      redis:
-        condition: service_healthy
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
-      - REDIS_USER=${REDIS_USER}
-      - REDIS_USER_PASSWORD=${REDIS_USER_PASSWORD}
-      - PYTHONUNBUFFERED=1
-    volumes:
-      - ./bot:/app/bot
-      - ./files:/app/files
-      - ./log:/app/log
-    restart: unless-stopped
+  # worker-2:
+  #   build: .
+  #   container_name: backgammon_worker_2
+  #   command: python -m bot.workers.hint_worker
+  #   depends_on:
+  #     redis:
+  #       condition: service_healthy
+  #   environment:
+  #     - REDIS_HOST=redis
+  #     - REDIS_PORT=6379
+  #     - REDIS_PASSWORD=${REDIS_PASSWORD}
+  #     - REDIS_USER=${REDIS_USER}
+  #     - REDIS_USER_PASSWORD=${REDIS_USER_PASSWORD}
+  #     - PYTHONUNBUFFERED=1
+  #   volumes:
+  #     - ./bot:/app/bot
+  #     - ./files:/app/files
+  #     - ./log:/app/log
+  #   restart: unless-stopped
 
   # === PostgreSQL (без изменений) ===
   db:
