--- a/docker-compose_worker.yml
+++ b/docker-compose_worker.yml
@@ -9,54 +9,8 @@ services:
       - REDIS_HOST=${REMOTE_REDIS_HOST}  # IP основного сервера
       - REDIS_PORT=6379
       - REDIS_PASSWORD=${REDIS_PASSWORD}
-      - PYTHONUNBUFFERED=1
-    volumes:
-      - ./bot:/app/bot
-      - ./files:/app/files
-      - ./log:/app/log
-    restart: unless-stopped
-
-  # === Worker #2 ===
-  worker-2:
-    build: .
-    container_name: backgammon_worker_2
-    command: python -m bot.workers.hint_viewer_worker
-    environment:
-      - REDIS_HOST=${REMOTE_REDIS_HOST}
-      - REDIS_PORT=6379
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
-      - PYTHONUNBUFFERED=1
-    volumes:
-      - ./bot:/app/bot
-      - ./files:/app/files
-      - ./log:/app/log
-    restart: unless-stopped
-
-  # === Worker #3 ===
-  worker-3:
-    build: .
-    container_name: backgammon_worker_3
-    command: python -m bot.workers.hint_viewer_worker
-    environment:
-      - REDIS_HOST=${REMOTE_REDIS_HOST}
-      - REDIS_PORT=6379
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
-      - PYTHONUNBUFFERED=1
-    volumes:
-      - ./bot:/app/bot
-      - ./files:/app/files
-      - ./log:/app/log
-    restart: unless-stopped
-
-  # === Worker #4 ===
-  worker-4:
-    build: .
-    container_name: backgammon_worker_4
-    command: python -m bot.workers.hint_viewer_worker
-    environment:
-      - REDIS_HOST=${REMOTE_REDIS_HOST}
-      - REDIS_PORT=6379
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_USER=${REDIS_USER}
+      - REDIS_USER_PASSWORD=${REDIS_USER_PASSWORD}
       - PYTHONUNBUFFERED=1
     volumes:
       - ./bot:/app/bot
