--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,17 +57,18 @@
     volumes:
       - pgdata:/var/lib/postgresql/data
 
-  # === RQ Dashboard для мониторинга (опционально) ===
-  # rq-dashboard:
-  #   image: eoranged/rq-dashboard:latest
-  #   container_name: backgammon_rq_dashboard
-  #   ports:
-  #     - "9181:9181"
-  #   environment:
-  #     - RQ_DASHBOARD_REDIS_URL=redis://{REDIS_USER}:${REDIS_PASSWORD}@redis:6379
-  #   depends_on:
-  #     - redis
-  #   restart: unless-stopped
+  # === RQ Dashboard для мониторинга ===
+  rq-dashboard:
+    image: eoranged/rq-dashboard:latest
+    container_name: backgammon_rq_dashboard
+    ports:
+      - "9181:9181"
+    environment:
+      - RQ_DASHBOARD_REDIS_URL=redis://${REDIS_USER}:${REDIS_PASSWORD}@redis:6379/0
+    depends_on:
+      redis:
+        condition: service_healthy
+    restart: unless-stopped
 
 volumes:
   pgdata:
