--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,9 @@
       - "9181:9181"
     environment:
       - RQ_DASHBOARD_REDIS_URL=redis://${REDIS_USER}:${REDIS_PASSWORD}@redis:6379/0
+      - RQ_DASHBOARD_HIDE_SUMMARY=true
+      - RQ_DASHBOARD_USERNAME=${RQ_DASHBOARD_USERNAME}
+      - RQ_DASHBOARD_PASSWORD=${RQ_DASHBOARD_PASSWORD}
     depends_on:
       redis:
         condition: service_healthy
