--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,20 +55,8 @@
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql
 
-  # === RQ Dashboard для мониторинга ===
-  rq-dashboard:
-    image: eoranged/rq-dashboard:latest
-    container_name: backgammon_rq_dashboard
-    ports:
-      - "9181:9181"
-    environment:
-      - RQ_DASHBOARD_REDIS_URL=redis://${REDIS_USER}:${REDIS_PASSWORD}@redis:6379/0
-    depends_on:
-      redis:
-        condition: service_healthy
-    restart: unless-stopped
 
 volumes:
   pgdata:
