--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,11 @@
         echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
         echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
         echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
+        echo "# memory limit and eviction policy" >> /usr/local/etc/redis/redis.conf &&
+        echo "maxmemory 512mb" >> /usr/local/etc/redis/redis.conf &&
+        echo "maxmemory-policy allkeys-lru" >> /usr/local/etc/redis/redis.conf &&
+        echo "# notify key events for SET so enforcer can apply TTL" >> /usr/local/etc/redis/redis.conf &&
+        echo "notify-keyspace-events Eg" >> /usr/local/etc/redis/redis.conf &&
         echo "user default on >$REDIS_PASSWORD ~* +@all" > /usr/local/etc/redis/users.acl &&
         echo "user $REDIS_USER on >$REDIS_USER_PASSWORD ~* &* +@all" >> /usr/local/etc/redis/users.acl &&
         redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
@@ -56,7 +61,6 @@
     volumes:
       - pgdata:/var/lib/postgresql
 
-  # === Flask-Admin панель ===
   admin-panel:
     build: .
     command: python -m bot.flask_admin.appbuilder_main
@@ -75,6 +79,7 @@
     depends_on:
       - db
       - redis
+      - backgammon-bot
     restart: unless-stopped
 
 
