--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,8 @@
       - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - pgdata:/var/lib/postgresql
+    ports:
+      - "127.0.0.1:5432:5432"
 
   # admin-panel:
   #   build: .
