--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,30 @@
       - .env
     restart: unless-stopped
 
+  fastapi:
+    build: .
+    container_name: backgammon_api
+    command: uvicorn api:app --host 0.0.0.0 --port 8000 
+    ports:
+      - "8000:8000"  
+    environment:
+      - POSTGRES_HOST=db
+      - REDIS_HOST=redis
+      - DB_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      - REDIS_URL=redis://${REDIS_USER}:${REDIS_USER_PASSWORD}@redis:6379/0
+    volumes:
+      - ./bot:/app/templates
+      - ./bot:/app/static
+      - ./bot:/app/bot
+      - ./log:/app/log
+      - ./files:/app/files
+    env_file:
+      - .env
+    depends_on:
+      - db
+      - redis
+    restart: unless-stopped
+
   redis:
     image: redis:latest
     container_name: redis
