--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@
   fastapi:
     build: .
     container_name: backgammon_api
-    command: uvicorn api:app --host 0.0.0.0 --port 8000 
+    command: uvicorn bot.api:app --host 0.0.0.0 --port 8000 
     ports:
       - "8000:8000"  
     environment:
